--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.adriano.localizacaoteste</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>localizacaoTeste</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
-
+	<name>localizacaoTeste</name>
+	<description>Teste de localizacao para Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
